# dl_cv_assistant

./: .gitignore  Dockerfile-backend  Dockerfile-frontend  README.md  docker-compose.yaml
backend/: main.py  pyproject.toml
backend/src/: routers.py  utils.py  yolo.py
backend/storage/maps/: high_priority_mapping.json  our_signs_map.json  text_info_mapping.json
experiments/faster-rcnn/: DatasetDescriptionConverter.py  coco_eval.py  requirements.txt  test_2ep_lr0.0005_mom0.9.ipynb  test_2ep_lr0.001_mom0.9.ipynb  test_4ep_lr0.001_mom0.9.ipynb  train.ipynb
experiments/yolo/: Baseline_yolo_v1.ipynb  Baseline_yolo_v2.ipynb  Baseline_yolo_v3.ipynb
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: MainComponent.js  VideoPlayer.js
